src/index.css
:root {
    --main-color: rgb(0, 255, 76);
    --font-color: rgb(160, 171, 183);
    --body-font: 'Lato', 'sans-serif';
    --title-font: 'Merriweather', serif;
}

html {
    background-color: rgb(19, 20, 23);
    
}
body {
    overflow-x: hidden;
    background-image: url("../public/background.png");
    background-size:cover;                 
    background-position: center; 
    background-repeat: no-repeat;
}
/* Header and Navigation */
/* hamburger menu */
.hamburger-menu {
    width: .5em;
}

#navigation-list {
    margin: 0;
    padding: 0;
}
#navigation-list li {
    display: inline;
    
}
.link-el {
    margin-left: 2vw;
    font-size: 1.8vw;
    font-family: var(--body-font);
    color: var(--font-color);
    text-decoration: none;
}
.link-el:hover {
    color: var(--main-color);
}

.navIsActive {
    color: var(--main-color)
}

/* Styles for the homepage */
#button-background {
    padding: 10vw 10vw;
}
#homepage-enter {
    font-size: 1.2em;
    padding: 1vw 5vw;
    border-radius: 5px;
    font-family: var(--title-font);
    opacity: 90%;
    border: none;
    color: black;
    background-color: var(--main-color);
    margin: 20vw auto 30vw;
    display: block;
    animation: showEnterBtn 2.5s ease-in;
    transition: 1.5s;
}
@keyframes showEnterBtn {
    from {
        padding: 1vw 5vw;
        border-radius: 5px;
        opacity: 0%;
        font-family: var(--title-font);
        text-decoration: none;
        border: none;
        color: black;
        background-color: var(--main-color);
        margin: 20vw auto 30vw;
        display: block;
    }
    to {
        padding: 1vw 5vw;
        border-radius: 5px;
        opacity: 90%;
        font-family: var(--title-font);
        text-decoration: none;
        border: none;
        color: black;
        background-color: var(--main-color);
        margin: 20vw auto 30vw;
        display: block;
    }
}

#homepage-enter:hover {
    background-color: var(--font-color);
}

#homepage-title {
    text-align: center;
    margin-top: 20vw;
}

#homepage-title H1 {
    font-size: 6vw;
    font-family: var(--title-font);
    font-weight: 600;
    left: 0;
    margin: 0 auto;
    position: relative;
    width: 70%;
    padding-bottom: 2vw;
    color: var(--font-color);
    animation: slideName 2s 1s both;
}
@keyframes slideName {
    from {
        font-size: 6vw;
        position: relative;
        left: -2000px;
        width: 70%;
        padding-bottom: 2vw;
        color: var(--font-color);
    }
    to {
        font-size: 6vw;
        margin: 0 auto;
        position: relative;
        width: 70%;
        padding-bottom: 2vw;
        color: var(--font-color);
    }
}
#homepage-title h2 {
    font-size: 4vw;
    position: relative;
    font-family: var(--body-font);
    right: 0px;
    margin-top: 2vw;
    color: var(--font-color);
    margin-bottom: 20vw;
    animation: slideTitle 2s 1s both;
}
@keyframes slideTitle {
    from {
        font-size: 4vw;
        position: relative;
        right: -2000px;
        margin-top: 2vw;
        color: var(--font-color);
        margin-bottom: 20vw;
    }
    to {
        font-size: 4vw;
        position: relative;
        right: 0px;
        margin-top: 2vw;
        color: var(--font-color);
        margin-bottom: 20vw;
    }
}

/* grow line in homepage */
.heading-bar {
    border-bottom: 1px solid var(--main-color);
    width: 85%;
    margin: 0 auto;
    animation: growLine 2s ease-in;
}
@keyframes growLine {
    from {
        border-bottom: 1px solid var(--main-color);
        width: 2%;
        margin: 0 auto;
    }
    to {
        border-bottom: 1px solid var(--main-color);
        width: 85%;
        margin: 0 auto;
    }
}

/* About me section */
.section-heading {
    letter-spacing: .2em;
    font-size: 3.5vw;
    position: relative;
    top: 0;
    font-family: var(--title-font);
    width: 80%;
    margin: 4vw auto 0;
    padding-bottom: 3vw;
    color: var(--font-color);
    text-align: center;
    padding: 5px;
    animation: slideHeadingDown 2s .5s both;
}
@keyframes slideHeadingDown {
    from {
        letter-spacing: .2em;
        position: relative;
        top: -1000px;
        font-size: 3.5vw;
        width: 80%;
        margin: 4vw auto 0;
        padding-bottom: 3vw;
        color: var(--font-color);
        text-align: center;
        padding: 5px;
    }
    to {
        letter-spacing: .2em;
        font-size: 3.5vw;
        position: relative;
        top: 0;
        width: 80%;
        margin: 4vw auto 0;
        padding-bottom: 3vw;
        color: var(--font-color);
        text-align: center;
        padding: 5px;
    }
    
}

#profile-pic {
    display: block;
    width: 10vw;
    border-radius: 50px;
    margin: 0 auto;
    margin-bottom: 10vw;
}

#about-me-write {
    font-size: 2vw;
    letter-spacing: .01em;
    font-family: var(--body-font);
    width: 90%;
    text-align: center;
    margin: 5vw auto;
    color: var(--font-color)
}
#quote {
    font-size: 1.5vw;
    width: 90%;
    margin: 0 auto;
    text-align: center;
    color: var(--font-color);
    font-style: italic;
}
#profile-section {
    opacity: 100%;
    animation: fadeInAboutMe 2s 2.5s both;
}
@keyframes fadeInAboutMe {
    from {
        opacity: 0%;
    }
    to {
        opacity: 100%;
    }
}
/* Styles for the portfolio */
.project-display {
    margin-top: 5vw;
    display: flex;
    justify-content: space-around;
    width: 100%;
    flex-wrap: wrap;
    text-align: center;
}
.gallery-cards {
    margin-bottom: 10vw ;
    position: relative;
    flex: 2 40%;
    margin-right: 20px;
}
.gallery-cards img {
    width: 80%;
    opacity: 40%;
}
.card-right img:hover {
    opacity: 100%;
    transform:  scale(1.2, 1.2) translateY(-15%);
    transition: 2s;
    cursor: pointer;
}
.card-left img:hover {
    opacity: 100%;
    transform: scale(1.2, 1.2) translateY(-15%);
    transition: 2s;
    cursor: pointer;
}
.gallery-cards img:not( :hover ) {
    transition: 2s;
}
.reveal {
    border: 3px solid var(--main-color)
}

/* styles for the modal */
.modalBackdrop {
	background: rgba(0, 0, 0, .65);
	bottom: 0;
	left: 0;
	overflow: auto;
	position: fixed;
	right: 0;
	top: 0;
	z-index: 1;
}

.modalContainer {
	background: var(--darker);
	border-radius: 5px;
	max-width: 100%;
	margin: 50px auto;
	padding: 15px;
	width: 960px;
}

.modal-picture {
    width: 50%;
}

.modal-title {
    color: var(--main-color);
    font-size: var(--body-font);
}
.modal-description {
    color: var(--font-color);
    font-size: var(--body-font);
    width: 85%;
    text-align: center;
    margin: 0 auto;
    line-height: 1.2em;
    font-size: 1.1em;
}

#modal-btn-group {
    margin: 0 auto;
    width: 85%;
    margin-top: 15px;
    display: flex;
    flex-wrap: wrap;
    justify-content:space-evenly;
}
.modal-links {
    padding: .25vw;
    border-radius: 5px;
    font-family: var(--body-font);
    text-decoration: none;
    color: black;
    background-color: var(--main-color);
    transition: .3s;
}
.modal-links:hover {
    color: red;
    cursor: pointer;
}
.modal-links:active {
    background-color: var(--font-color);
}
.modal-btn-close {
    border-radius: 5px;
    font-family: var(--body-font);
    color: white;
    background-color: rgb(198, 4, 4);
    border: none;
    transition: .3s;
}
.modal-btn-close:active {
    background-color: var(--font-color);
}
.modal-btn-close:hover {
    color: black;
}

/* Styles for Contact Component */
#contact-form {
    margin-top: 5vw;
    margin-bottom: 6vw;
    opacity: 100%;
    animation: fadeInContactForm 2s 2.5s both;
}
label {
    color: var(--font-color);
    font-family: var(--body-font);
    font-size: 1em;
    margin-bottom: 5px;
}
.form-div {
    width: 40%;
    margin: 0 auto 2vw;
    text-align: left;
    justify-items: center;
}
input, textarea {
    width: 100%;
    font-family: var(--body-font);
    border-radius: 5px;
    padding: 8px;
    background-color: var(--font-color);
    font-weight: 500;
}
input {
    height: 2em;
}
input:focus, textarea:focus {
    background-color: rgb(243, 233, 233);
    border: 2px solid var(--main-color);
}
#contact-submit {
    padding: .25vw;
    border-radius: 5px;
    font-family: var(--body-font);
    border: none;
    text-decoration: none;
    color: black;
    background-color: var(--main-color);
    transition: .3s;
}
#contact-submit:hover {
    color: red;
    cursor: pointer;
}
#contact-submit:active {
    background-color: var(--font-color);
}
.error-text {
    color: red;
    text-align: center;
}

@keyframes fadeInContactForm {
    from {
        margin-top: 5vw;
        margin-bottom: 6vw;
        opacity: 0%;
    }
    to {
        margin-top: 5vw;
        margin-bottom: 6vw;
        opacity: 100%;
    }
}

/* Styles for the Resume */
.react-pdf__Page__canvas {
    margin: 5vw auto;
    opacity: 100%;
    position: relative;
    bottom: 0;
    animation: slideUpResume 2s 2s both;
}
@keyframes slideUpResume {
    from {
        margin: 5vw auto;
        opacity: 0%;
        position: relative;
        bottom: -2000px;
    }
    to {
        margin: 5vw auto;
        opacity: 100%;
        position: relative;
        bottom: -0;
    }
}

/* Styles for Footer */
footer a {
    font-size: 4vw;
    color: var(--main-color)
}
footer a:hover {
    color: var(--font-color)
}

